change to new design

--- a/main-order/order.html
+++ b/main-order/order.html
@@ -9,37 +9,35 @@
         
         <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
         <link href="../main-order/main-order-style.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="items.css">
 
         <!-- Huy -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="../main-order/billstyle.css" />
     </head>
     <body>
         <div id="title" class = "cl-xs-12">
             <i class="fa offset-xs-1 cl-xs-1" >&#xf0c9;</i>
-            <img class="logo offset-xs-2 cl-xs-4 " src="https://preview.ibb.co/kzLOhp/Logo.png" >
+            <img class="logo offset-xs-2 offset-md-4 cl-xs-4 " src="https://preview.ibb.co/kzLOhp/Logo.png" >
             <button class="fa offset-xs-2 cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
             <div class="cl-md-4 offset-md-8" id="user-bar"> 
                 <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
-        <span class="cl-xs-12 cl-md-9" id="main-order">
+        <span class="cl-xs-12 cl-md-9 row" id="main-order">
             <!-- for one snack -->
-            <!-- first -->
-            <!-- <span class="one-snack">
-                <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento ">
-                <span class="main-snack-name" id="snack-name-1">
+            <!-- <div class="one-snack cl-md-3 cl-sm-4 cl-xs-6">
+                <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento">
+                <div class="main-snack-name" id="snack-name-1">
                     Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)
-                </span>
-                <span class="main-snack-price" id="snack-price-1">
+                </div>    
+                <div class="main-snack-price" id="snack-price-1">
                     19.000 ₫
-                </span>
-                <input type="checkbox" id="checkbox-1" onclick="chooseSnack(1)">
-            </span> -->
-
+                </div>
+                <input class="checkbox-button" type="checkbox" id="checkbox-1" onclick="chooseSnack(1)">
+            </div> -->
         </span>
 
         <!-- Huy -->
