change to label

--- a/main-order/order.html
+++ b/main-order/order.html
@@ -28,7 +28,7 @@
         </div>
         <span class="cl-xs-12 cl-md-9 row" id="main-order">
             <!-- for one snack -->
-            <!-- <div class="one-snack cl-md-3 cl-sm-4 cl-xs-6">
+            <!-- <label class="one-snack cl-md-3 cl-sm-4 cl-xs-6" for="checkbox-1">
                 <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento">
                 <div class="main-snack-name" id="snack-name-1">
                     Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)
@@ -37,7 +37,7 @@
                     19.000 ₫
                 </div>
                 <input class="checkbox-button" type="checkbox" id="checkbox-1" onclick="chooseSnack(1)">
-            </div> -->
+            </label> -->
         </span>
 
         <!-- Huy -->
