--- a/login/login.html
+++ b/login/login.html
@@ -2,16 +2,18 @@
     <head>
         <title> Login Account Snack Order Menu </title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
+        <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
         <link rel="stylesheet" type="text/css" href="../login/login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="main-content">
-            <div class="logo-container">
-                <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+        <div class="main-content cl-xs-12">
+            <div class="logo-container cl-xs-12 ">
+                <img class="logo offset-xs-1 cl-xs-11" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
-            <div class="container">
+            <div class="container offset-xs-3 cl-xs-9">
                 <h3>Email</h3>
                 <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
