Login responsive design

--- a/login/login.html
+++ b/login/login.html
@@ -9,11 +9,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="main-content cl-xs-12">
-            <div class="logo-container cl-xs-12 ">
-                <img class="logo offset-xs-1 cl-xs-11" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+        <div class="main-content">
+            <div class="logo-container offset-xs-2 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
+                <img class="logo cl-xs-12 cl-sm-12 cl-md-12" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
-            <div class="container offset-xs-3 cl-xs-9">
+            <div class="container offset-xs-1 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
                 <h3>Email</h3>
                 <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
