--- a/main-order/order.html
+++ b/main-order/order.html
@@ -18,9 +18,9 @@
     </head>
     <body>
         <div id="title" class = "cl-xs-12">
-            <i class="fa offset-xs-1 cl-xs-1" >&#xf0c9;</i>
-            <img class="logo offset-xs-2 offset-md-4 cl-xs-4 " src="https://preview.ibb.co/kzLOhp/Logo.png" >
-            <button class="fa offset-xs-2 cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
+            <i class="fa cl-xs-2" >&#xf0c9;</i>
+            <img class="logo offset-xs-2 offset-md-4 cl-xs-4 " src="../images/logo.png" >
+            <button class="fa cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
             <div class="cl-md-4 offset-md-8" id="user-bar"> 
                 <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
