--- a/login/login.html
+++ b/login/login.html
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             <div class="logo-container">
-                <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+                <img class="logo" src="../images/logo.png" >
             </div>
             <div class="container">
                 <h3>Email</h3>
