--- a/login/login.html
+++ b/login/login.html
@@ -11,7 +11,7 @@
     <body>
         <div class="main-content">
             <div class="logo-container offset-xs-2 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
-                <img class="logo cl-xs-12 cl-sm-12 cl-md-12" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+                <img class="logo cl-xs-12 cl-sm-12 cl-md-12" src="../images/logo.png" >
             </div>
             <div class="container offset-xs-1 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
                 <h3>Email</h3>
