--- a/main-order/order.html
+++ b/main-order/order.html
@@ -28,7 +28,7 @@
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
-        <div class="fa cl-xs-6" id="hambuger-box">
+        <div class="cl-xs-6" id="hambuger-box">
             <a href="../profile/profile.html"><div class="hambuger-option cl-xs-12">Profile</div></a>
             <div class="hambuger-option cl-xs-12" id="log-out-button-hambuger">Log Out</div>
         </div>
