Add static router

--- a/main-order/order.html
+++ b/main-order/order.html
@@ -12,7 +12,7 @@
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Monofett'>        
         
         <link rel="stylesheet" type="text/css" href="../main-order/order.css">
-        <link rel="stylesheet" type="text/css" href="../main-order/main-order-style.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../main-order/main-order-style.css"> -->
         <link rel="stylesheet" type="text/css" href="../main-order/items.css">
         <link rel="stylesheet" type="text/css" media="screen" href="../main-order/billstyle.css">
     </head>
