--- a/main-order/order.html
+++ b/main-order/order.html
@@ -29,13 +29,13 @@
             </div>
             <button class="fa cl-xs-2" id="cart-button" onclick="popUp()">&#xf07a;</button>
             <div class="cl-md-4" id="user-bar"> 
-                <a href="/order.com/profile"> <div id="user-name">Username </div> </a>
+                <a href="/profile"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
 
         <div class="cl-xs-6" id="hambuger-box">
-            <a href="/order.com/profile"><div class="hambuger-option cl-xs-12">Profile</div></a>
+            <a href="/profile"><div class="hambuger-option cl-xs-12">Profile</div></a>
             <div class="hambuger-option cl-xs-12" id="log-out-button-hambuger">Log Out</div>
         </div>
 
