--- a/profile/profile.html
+++ b/profile/profile.html
@@ -26,7 +26,7 @@
                 <button type="submit" id="change-button" onclick="alertUserinChangingProfile()"> Change</button>  
                 <!-- <button type="submit" id="change-button" onclick="goToChangeMode()"> Change</button>   -->
                 <button type="submit" id="save-button" onclick="goToNormalMode(true)"> Save</button>  
-                <a href="/order.com"> <button type="submit" id="return-button"> Return</button>  </a>
+                <a href="/"> <button type="submit" id="return-button"> Return</button>  </a>
             </div>
         </div>
     </body>
