can create user via signup

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
     <head>
         <title> Register Account Snack Order Menu </title>
         <link rel="stylesheet" type="text/css" href="../signup/signup.css">
@@ -26,4 +26,4 @@
     <script src="../signup/signupscript.js"> </script>
 </html> -->
 
-<!--Documentation This Section is in development-->
+<!--Documentation This Section is in development
