--- a/signup/signup.html
+++ b/signup/signup.html
@@ -18,7 +18,7 @@
                 <h3>Repeat password</h3>
                 <input id="input-repeat-password" type="password" placeholder="&#xf023 * Confirm Password (8-16 characters)" name="passwordRepeat" required><br>
                 <div class = "button">  <button type="submit" id="sign-up-button"> Sign Up</button></div>
-                <h4 id = "redirect-log-in"> Do you have an account? <a id = "link-sign-in" href="../login/login.html"> Sign in</a></h4>
+                <h4 id = "redirect-log-in"> Do you have an account? <a id = "link-sign-in" href="/login"> Sign in</a></h4>
             </div>
         </div>
     </body>
