--- a/profile/delete-account.html
+++ b/profile/delete-account.html
@@ -29,13 +29,13 @@
                             </div>
                         <div class="profile-menu">
                             <ul class="nav">
-                                <li class="active">
+                                <li class="">
                                     <a href="/profile">Basic infomation</a>
                                 </li>
                                 <li class="">
                                     <a href="/profile/change-password">Change password</a>
                                 </li>
-                                <li class="">
+                                <li class="active">
                                     <a href="/profile/delete-account">Delete account</a>
                                 </li>
                             </ul>
@@ -46,47 +46,22 @@
                     <div class="profile-content">
                         <div class="cl-md-2"></div>
                         <div class="cl-md-8">
-                            <h2 class="profile-title">Profile</h2>
+                            <h2 class="profile-title">Delete Account</h2>
                             <div class="info-bar">
-                                <label class="property cl-md-4">Name : </label>
-                                <div class="cl-md-8">
-                                    <h4>Full name shows here</h4>
-                                </div>
+                                <label class="property cl-md-4">Current Password : </label>
+                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Enter your password "  name="password" required>
                             </div>
                             <div class="info-bar">
-                                <label class="property cl-md-4">Phone : </label>
-                                <div class="cl-md-8">
-                                    <h4>Phone number shows here</h4>
-                                </div>
+                                <label class="property cl-md-4">New Password : </label>
+                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Enter your new password "  name="password" required>
                             </div>
                             <div class="info-bar">
-                                <label class="property cl-md-4">Gender : </label>
-                                <div class="cl-md-8">
-                                    <h4>Gender shows here</h4>
-                                </div>
+                                <label class="property cl-md-4">Confirm Password : </label> 
+                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Confirm your new password "  name="password" required>
                             </div>
-                            <div class="info-bar">
-                                <label class="property cl-md-4">Birthday : </label>
-                                <div class="cl-md-8">
-                                    <h4>Birthday shows here</h4>
-                                </div>
-                            </div>
-                            <div class="info-bar">
-                                <label class="property cl-md-4">Address : </label>
-                                <div class="cl-md-8">
-                                    <h4>Address shows here</h4>
-                                </div>
-                            </div>
-                            <div class="info-bar">
-                                <label class="property cl-md-4">Description : </label>
-                                <div class="cl-md-8">
-                                    <div class="description">Description shows here</div>
-                                </div>
-                            </div>
-                            <div class = "button">
+                            <div class = "button">    
                                 <a href="/"> <button type="submit" id="return-button" class = "offset-xs-1 cl-xs-4 offset-sm-1 cl-sm-3 offset-md-1 cl-md-5" > Return to Homepage</button>  </a>
-                                <button type="submit" id="change-button" class = "offset-xs-1 cl-xs-4 offset-sm-1 cl-sm-3 offset-md-1 cl-md-5" onclick="alertUserinChangingProfile()"> Change info</button>  
-                                <button type="submit" id="save-button" class = "offset-xs-2 cl-xs-4 offset-sm-2 cl-sm-3 offset-md-2 cl-md-5" onclick="goToNormalMode(true)"> Save</button>  
+                                <button type="submit" id="change-pass-button" class = "offset-xs-1 cl-xs-4 offset-sm-1 cl-sm-3 offset-md-1 cl-md-5" > Delete account </button>
                             </div>
                         </div>
                         <div class="cl-md-2"></div>
