change password in user's profile

--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -49,15 +49,15 @@
                             <h2 class="profile-title">Change Password</h2>
                             <div class="info-bar">
                                 <label class="property cl-md-4">Current Password : </label>
-                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Enter your password "  name="password" required>
+                                <input class="cl-md-8" id="current-password" type="password" placeholder="&#xf023  * Enter your password "  name="password" required>
                             </div>
                             <div class="info-bar">
                                 <label class="property cl-md-4">New Password : </label>
-                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Enter your new password "  name="password" required>
+                                <input class="cl-md-8" id="new-password" type="password" placeholder="&#xf023  * Enter your new password "  name="password" required>
                             </div>
                             <div class="info-bar">
                                 <label class="property cl-md-4">Confirm Password : </label> 
-                                <input class="cl-md-8" id="input-password" type="password" placeholder="&#xf023  * Confirm your new password "  name="password" required>
+                                <input class="cl-md-8" id="repeat-new-password" type="password" placeholder="&#xf023  * Confirm your new password "  name="password" required>
                             </div>
                             <div class = "button">    
                                 <a href="/"> <button type="submit" id="return-button" class = "offset-xs-1 cl-xs-4 offset-sm-1 cl-sm-3 offset-md-1 cl-md-5" > Return to Homepage</button>  </a>
@@ -71,5 +71,6 @@
         </div>
     </body>
     <script src="../others/utilityFunction.js"></script>
-    <script src="../profile/profilescript.js"> </script>
+    <!-- <script src="../profile/profilescript.js"></script> -->
+    <script src="../profile/changepassword.js"></script>
 </html>
