fix a little thing

--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -57,8 +57,8 @@
                                 <input class="cl-xs-12 cl-sm-7 cl-md-7" id="repeat-new-password" type="password" placeholder="&#xf023  * Confirm your new password "  name="password" required>
                             </div>
                             <div class = "button">    
-                                <a href="/"> <button type="submit" id="return-button" class = "cl-xs-12 offset-sm-1 cl-sm-4 offset-md-1 cl-md-5" > Return to <br> Homepage</button>  </a>
-                                <button type="submit" id="change-pass-button" class = "cl-xs-12 offset-sm-2 cl-sm-4  offset-md-1 cl-md-5" > Change <br> password </button>
+                                <a href="/"> <button type="submit" id="return-button" class = "cl-xs-12 offset-sm-1 cl-sm-4 cl-md-5" > Return to <br> Homepage</button>  </a>
+                                <button type="submit" id="change-pass-button" class = "cl-xs-12 offset-sm-2 cl-sm-4 offset-md-1 cl-md-5" > Change <br> password </button>
                             </div>
                         </div>
                         <div class="cl-md-2"></div>
