--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -69,5 +69,5 @@
     </body>
     <script src="../others/utilityFunction.js"></script>
    <script src="../profile/profilescript.js"></script> 
-    <script src="../profile/changePassword.js"></script>
+    <script src="../profile/changepassword.js"></script>
 </html>
