--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -41,8 +41,7 @@
                 </div>
                 <div class="cl-xs-12 cl-md-9">
                     <div class="profile-content">
-                        <div class="cl-md-2"></div>
-                        <div class="cl-xs-12 cl-md-8">
+                        <div class="cl-xs-12 offset-md-1 cl-md-10">
                             <h2 class="profile-title">Change Password</h2>
                             <div class="info-bar">
                                 <label class="property cl-xs-12 cl-sm-5 cl-md-5">Current Password: </label>
