Front end for upload avatar!

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -25,6 +25,7 @@
                         <div class="profile-user-avatar">
                             <img class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
                         </div>
+                        <input type="file" id="avatar-input-field">  
                         <div class="profile-username" id="user-field">
                             </div>
                         <div class="profile-menu">
@@ -81,4 +82,5 @@
     </body>
     <script src="../others/utilityFunction.js"></script>
     <script src="../profile/profilescript.js"> </script>
+    <script src="../profile/avatar.js"></script>
 </html>
