--- a/profile/profile.html
+++ b/profile/profile.html
@@ -23,7 +23,7 @@
                 <div class="cl-xs-12 cl-md-3">
                     <div class="profile-sidebar">
                         <div class="profile-user-avatar">
-                            <img class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
+                            <img id="avatar" class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
                         </div>
                         <input type="file" id="avatar-input-field">  
                         <div class="profile-username" id="user-field">
