--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -23,7 +23,7 @@
                 <div class="cl-xs-12 cl-md-3">
                     <div class="profile-sidebar">
                         <div class="profile-user-avatar">
-                            <img class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
+                            <img id="avatar" class="avatar" src="https://i.imgur.com/S2IRHcz.png" alt="User Avatar">
                         </div>
                         <div class="profile-username" id="user-field">
                             </div>
@@ -67,6 +67,6 @@
         </div>
     </body>
     <script src="../others/utilityFunction.js"></script>
-   <script src="../profile/profilescript.js"></script> 
+    <script src="../profile/profilescript.js"></script> 
     <script src="../profile/changepassword.js"></script>
 </html>
