--- a/login/login.html
+++ b/login/login.html
@@ -10,18 +10,18 @@
     </head>
     <body>
         <div class="main-content">
-            <div class="logo-container offset-xs-2 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
+            <div class="logo-container offset-xs-1 cl-xs-10 offset-sm-2 cl-sm-8 offset-md-3 cl-md-6">
                 <img class="logo cl-xs-12 cl-sm-12 cl-md-12" src="../images/logo.png" >
             </div>
-            <div class="container offset-xs-1 cl-xs-10 offset-sm-2 cl-sm-6 offset-md-4 cl-md-6">
+            <div class="container offset-xs-1 cl-xs-10 offset-sm-3 cl-sm-6 offset-md-3 cl-md-6">
                 <h3>Email</h3>
                 <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
                 <input id="input-password" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="password" required>
-                <div class = "button">  
+                <div class = "button ">  
                     <button type="submit" id="signin-button"> Sign In</button> 
                 </div>
-                <h4 id = "redirect-register"> Don't you have an account? 
+                <h4 id = "redirect-register"> Don't you have an account? <br>
                     <a id = "link-signup" href="#"> We got you </a>
                 </h4>
             </div>
