--- a/main-order/order.html
+++ b/main-order/order.html
@@ -33,9 +33,11 @@
             </div>
         </div>
 
-        <div class="cl-xs-6" id="hambuger-box">
-            <a href="/profile"><div class="hambuger-option cl-xs-12">Profile</div></a>
-            <div class="hambuger-option cl-xs-12" id="log-out-button-hambuger">Log Out</div>
+        <div class="cl-xs-8 cl-sm-6 " id="hambuger-box">
+            <div class="selection-container">
+                <a href="/profile"><div class="hambuger-option cl-xs-12">Profile</div></a>
+                <div class="hambuger-option cl-xs-12" id="log-out-button-hambuger">Log Out</div>
+            </div>
         </div>
 
         <div class="container">
