--- a/login/login.html
+++ b/login/login.html
@@ -4,22 +4,24 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
         <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
+
         <link rel="stylesheet" type="text/css" href="../login/login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="main-content">
-            <div class="logo-container offset-xs-1 cl-xs-10 offset-sm-2 cl-sm-8 offset-md-3 cl-md-6">
-                <img class="logo cl-xs-12 cl-sm-12 cl-md-12" src="../images/logo.png" >
+            <div class="logo-container">
+                <img class="logo cl-xs-12" src="../images/logo.png">
             </div>
-            <div class="container offset-xs-1 cl-xs-10 offset-sm-3 cl-sm-6 offset-md-3 cl-md-6">
+            <div class="container cl-xs-12">
                 <h3>Email</h3>
                 <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
                 <input id="input-password" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="password" required>
-                <div class = "button ">  
-                    <button type="submit" id="signin-button"> Sign In</button> 
+                <div class="button">  
+                    <button type="submit" id="signin-button">Sign In</button> 
                 </div>
                 <h4 id = "redirect-register"> Don't you have an account? <br>
                     <a id = "link-signup" href="#"> We got you </a>
