--- a/signup/signup.html
+++ b/signup/signup.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="main-content">
+        <!-- <div class="main-content">
             <div class="logo-container">
                <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
@@ -23,7 +23,8 @@
         </div>
     </body>
     <script src="../others/utilityFunction.js"></script>
-    <script src="../signup/signupscript.js"> </script>
-</html> -->
+    <script src="../signup/signupscript.js"> </script> -->
+    <h1>The feature is disabled</h1>
+</html> 
 
-<!--Documentation This Section is in development
+<!--Documentation This Section is in development-->
