--- a/profile/change-password.html
+++ b/profile/change-password.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class = "button">    
                                 <a href="/"> <button type="submit" id="return-button" class = "cl-xs-12 offset-sm-1 cl-sm-4 cl-md-5" > Return to <br> Homepage</button>  </a>
-                                <button type="submit" id="change-pass-button" class = "cl-xs-12 offset-sm-2 cl-sm-4 offset-md-1 cl-md-5" > Change <br> password </button>
+                                <button type="submit" id="change-pass-button" class = "cl-xs-12 offset-sm-2 cl-sm-4 offset-md-1 cl-md-5" > Change <br> Password </button>
                             </div>
                         </div>
                         <div class="cl-md-2"></div>
