--- a/profile/profile.html
+++ b/profile/profile.html
@@ -52,25 +52,25 @@
                             <div class="info-bar">
                                 <label class="property cl-xs-12 cl-sm-4 cl-md-3">Name : </label>
                                 <div class="cl-xs-12 cl-sm-8 cl-md-8">
-                                    <input  id="user-fullname" class="cl-xs-12 cl-sm-9 cl-md-10" disabled>
+                                    <input  id="user-fullname" class="cl-xs-12 cl-sm-9 cl-md-10" placeholder="&#xf2c1 Ex. John Doe" disabled>
                                 </div>
                             </div>
                             <div class="info-bar">
                                 <label class="property cl-xs-12 cl-sm-4 cl-md-3">Phone : </label>
                                 <div class="cl-xs-12 cl-sm-8 cl-md-8">
-                                    <input  id="user-phonenumber" class="cl-xs-12 cl-sm-9 cl-md-10" disabled> 
+                                    <input  id="user-phonenumber" class="cl-xs-12 cl-sm-9 cl-md-10" placeholder="&#xf098 Ex. 0123456789" disabled> 
                                 </div>
                             </div>
                             <div class="info-bar">
                                 <label class="property cl-xs-12 cl-sm-4 cl-md-3">Birthday : </label>
                                 <div class="cl-xs-12 cl-sm-8 cl-md-8">
-                                    <input  id="user-birthday" class="cl-xs-12 cl-sm-9 cl-md-10" disabled>
+                                    <input  id="user-birthday" class="cl-xs-12 cl-sm-9 cl-md-10" placeholder="&#xf1fd Ex. 1/1/2000" disabled>
                                 </div>
                             </div>
                             <div class="info-bar">
                                 <label class="property cl-xs-12 cl-sm-4 cl-md-3">Address : </label>
                                 <div class="cl-xs-12 cl-sm-8 cl-md-8">
-                                    <input id="user-address" class="cl-xs-12 cl-sm-9 cl-md-10" disabled>
+                                    <input id="user-address" class="cl-xs-12 cl-sm-9 cl-md-10" placeholder="&#xf2bc Ex. Some Address 123" disabled>
                                 </div>
                             </div>
                             <div class = "button">
