--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,63 +7,53 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <link rel="stylesheet" href="../css/mystyles.css">
+        <link rel="stylesheet" href="admin.css">
     </head>
     <body>
         <div class="container is-fullhd">
             <div class="columns">
-                <div class="column is-2">
+                <div class="column is-2 is-hidden-mobile">
                     <thead>
                         <nav class="navbar" role="navigation" aria-label="main navigation">
-                            <div class="navbar-brand">
-                                <a class="navbar-item" href="https://bulma.io">
-                                  <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+                            <div class="logo-container">
+                                <a>
+                                  <img class="logo" src="../images/logo.png">
                                 </a>
-                                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                                <!-- <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
                                     <span aria-hidden="true"></span>
                                     <span aria-hidden="true"></span>
                                     <span aria-hidden="true"></span>
-                                </a>
+                                </a> -->
                             </div>
                         </nav>
                     </thead>
                     <tbody>
                     <aside class="menu">
-                        <p class="menu-label">
-                          General
-                        </p>
                         <ul class="menu-list">
-                          <li><a>Dashboard</a></li>
-                          <li><a>Customers</a></li>
-                        </ul>
-                        <p class="menu-label">
-                              Administration
-                        </p>
-                        <ul class="menu-list">
-                          <li><a>Team Settings</a></li>
-                          <li>
-                            <a class="is-active">Manage Your Team</a>
-                            <ul>
-                              <li><a>Members</a></li>
-                              <li><a>Plugins</a></li>
-                              <li><a>Add a member</a></li>
-                            </ul>
-                          </li>
-                          <li><a>Invitations</a></li>
-                          <li><a>Cloud Storage Environment Settings</a></li>
-                          <li><a>Authentication</a></li>
-                        </ul>
-                        <p class="menu-label">
-                          Transactions
-                        </p>
-                        <ul class="menu-list">
-                          <li><a>Payments</a></li>
-                          <li><a>Transfers</a></li>
-                          <li><a>Balance</a></li>
+                            <li><a id="today-order" class="choice is-active" onclick="showContent(event,'today-content','table')">Today Order</a></li>
+                            <li>
+                                <a id="order-history" class="choice" onclick="showContent(event, 'order-content','block')">Order history</a>
+                                <ul>
+                                    <li> <p id="order-detail-label" class="menu-label">Order history detail</p></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a id="users" class="choice" onclick="showContent(event, 'user-content','block')">Users</a>
+                                <ul>
+                                    <li><p  id="user-detail-label" class="menu-label">User detail</p></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a id="product" class="choice" onclick="showContent(event,'product-content','block')">Product list</a>
+                                <ul>
+                                    <li> <p  id="product-detail-label" class="menu-label">Product detail</p></li>
+                                </ul>
+                            </li>
                         </ul>
                       </aside>
                     </tbody>
                     </div>
-                    <div class="column is-10">
+                    <div class="column is-10" id="body">
                         <thead>
                             <nav class="navbar" role="navigation" aria-label="main navigation">
                                 <div class="navbar-end">
@@ -86,49 +76,175 @@
                             </nav>
                         </thead>
                         <tbody>
-                            <div class="tile is-ancestor">
-                                <div class="tile is-vertical is-8">
-                                    <div class="tile">
-                                        <div class="tile is-parent is-vertical">
-                                            <article class="tile is-child notification is-primary">
-                                                <p class="title">Vertical...</p>
-                                                <p class="subtitle">Top tile</p>
-                                            </article>
-                                            <article class="tile is-child notification is-warning">
-                                                <p class="title">...tiles</p>
-                                                <p class="subtitle">Bottom tile</p>
-                                            </article>
-                                        </div>
-                                        <div class="tile is-parent">
-                                            <article class="tile is-child notification is-info">
-                                                <p class="title">Middle tile</p>
-                                                <p class="subtitle">With an image</p>
-                                                <figure class="image is-4by3">
-                                                    <img src="https://bulma.io/images/placeholders/640x480.png">
-                                                </figure>
-                                            </article>
-                                        </div>
+                            <table id="today-content" class="tab table is-striped is-fullwidth">
+                                <tr class="has-background-grey-lighter">
+                                    <th>Product name</th>
+                                    <th>Quantity</th>
+                                    <th>Unit price</th>
+                                    <th>Total</th>
+                                    <th>Buyer</th>
+                                    <th>Actions</th>
+                                </tr> 
+                                <tr>
+                                    <td>Snack something</td>
+                                    <td>2</td>
+                                    <td>19.000đ</td>
+                                    <td>38.000đ</td>
+                                    <td>test@gmail.com</td>
+                                    <td>In progress</td>
+                                </tr>
+                                <tr>
+                                    <td>Snack something</td>
+                                    <td>2</td>
+                                    <td>19.000đ</td>
+                                    <td>38.000đ</td>
+                                    <td>test@gmail.com</td>
+                                    <td>In progress</td>
+                                </tr>
+                                <tr>
+                                    <td>Snack something</td>
+                                    <td>2</td>
+                                    <td>19.000đ</td>
+                                    <td>38.000đ</td>
+                                    <td>test@gmail.com</td>
+                                    <td>In progress</td>
+                                </tr>
+                            </table>
+                            <div id="order-content" class="tab" onclick="showDetail('order-detail')">
+                                <div>
+                                    <div id="user-container">
+                                        <span id="user-item">
+                                            ID: 123456789
+                                        </span>
+                                        <span id="user-item">
+                                            test@gmail.com
+                                        </span>
+                                        <span id="user-item">
+                                            Total: 15,000đ
+                                        </span>
                                     </div>
-                                        <div class="tile is-parent">
-                                        <article class="tile is-child notification is-danger">
-                                            <p class="title">Wide tile</p>
-                                            <p class="subtitle">Aligned with the right tile</p>
-                                            <div class="content">
-                                            <!-- Content -->
-                                            </div>
-                                        </article>
-                                        </div>
+                                </div>  
+                                <div id="order-detail" class="detail">
+                                    <table class="table is-striped is-fullwidth">
+                                        <tr class="has-background-grey-lighter">
+                                            <th>Product name</th>
+                                            <th>Quantity</th>
+                                            <th>Unit price</th>
+                                            <th>Total</th>
+                                            <th>Buyer</th>
+                                            <th>Actions</th>
+                                        </tr> 
+                                        <tr>
+                                            <td>Snaing</td>
+                                            <td>2</td>
+                                            <td>19.000đ</td>
+                                            <td>38.000đ</td>
+                                            <td>test@gmail.com</td>
+                                            <td>In progress</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Snack something</td>
+                                            <td>2</td>
+                                            <td>19.000đ</td>
+                                            <td>38.000đ</td>
+                                            <td>test@gmail.com</td>
+                                            <td>In progress</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Snack something</td>
+                                            <td>2</td>
+                                            <td>19.000đ</td>
+                                            <td>38.000đ</td>
+                                            <td>test@gmail.com</td>
+                                            <td>In progress</td>
+                                        </tr>
+                                    </table>
                                 </div>
-                                <div class="tile is-parent">
-                                    <article class="tile is-child notification is-success">
-                                    <div class="content">
-                                        <p class="title">Tall tile</p>
-                                        <p class="subtitle">With even more content</p>
-                                        <div class="content">
-                                        <!-- Content -->
-                                        </div>
+                            </div>
+                            <div id="user-content" class="tab" onclick="showDetail('user-detail')">
+                                <div>
+                                    <div id="user-container">
+                                        <span id="user-item">
+                                            ID: 123789
+                                        </span>
+                                        <span id="user-item">
+                                            test@gmail.com
+                                        </span>
                                     </div>
-                                    </article>
+                                </div>  
+                                <div id="user-detail" class="detail">
+                                    <table class="table is-striped is-fullwidth">
+                                        <tr class="has-background-grey-lighter">
+                                            <th>Username</th>
+                                            <th>Full name</th>
+                                            <th>Phone</th>
+                                            <th>Address</th>
+                                            <th>Birthday</th>
+                                        </tr> 
+                                        <tr>
+                                            <td>test@gmail.com</td>
+                                            <td>TEST</td>
+                                            <td>1234654</td>
+                                            <td>3525131aksdhaksjdhasd</td>
+                                            <td>01/01/1000</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div id="product-content" class="tab product" onclick="showDetail('product-detail')">
+                                <div>
+                                    <div id="user-container">
+                                        <span id="user-item">
+                                            ID:56789
+                                        </span>
+                                        <span id="user-item">
+                                            Snack Rong biển Nongshim
+                                        </span>
+                                    </div>
+                                </div>  
+                                <div id="product-detail" class="detail">
+                                    <table class="table is-striped is-fullwidth">
+                                        <tr class="has-background-grey-lighter">
+                                            <th>Product name</th>
+                                            <th>Unit price</th>
+                                            <th>In stock</th>
+                                            <th>Image</th>
+                                        </tr> 
+                                        <tr>
+                                            <td>Snack something</td>
+                                            <td>19.000đ</td>
+                                            <td>100</td>
+                                            <td>snack.jpg</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div id="product-content" class="tab product" onclick="showDetail('product-detail')">
+                                <div>
+                                    <div id="user-container">
+                                        <span id="user-item">
+                                            ID:56789
+                                        </span>
+                                        <span id="user-item">
+                                            Snack Rong biển Nongshim
+                                        </span>
+                                    </div>
+                                </div>  
+                                <div id="product-detail" class="detail">
+                                    <table class="table is-striped is-fullwidth">
+                                        <tr class="has-background-grey-lighter">
+                                            <th>Product name</th>
+                                            <th>Unit price</th>
+                                            <th>In stock</th>
+                                            <th>Image</th>
+                                        </tr> 
+                                        <tr>
+                                            <td>Snack something</td>
+                                            <td>19.000đ</td>
+                                            <td>100</td>
+                                            <td>snack.jpg</td>
+                                        </tr>
+                                    </table>
                                 </div>
                             </div>
                         </tbody> 
@@ -136,4 +252,5 @@
                 </div>
             </div>
     </body>
+    <script src="admin.js"></script>
 </html>
