--- a/login/login.html
+++ b/login/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Login Account Snack Order Menu </title>
+        <title> Login - Snack Order</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
         <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
