--- a/main-order/order.html
+++ b/main-order/order.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Order </title>
+        <title> Main Menu - Snack Order </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="total">
                         <div id="total-price">Total price: </div>
-                        <div id="total-price-number">15000d</div>
+                        <div id="total-price-number"></div>
                     </div>
                     <button class="my-button" id="order-button">Order</button>
                 </div>
