--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Profile </title>
+        <title> Profile - Snack Order </title>
         <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
         <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
 
